added all options

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
+html {
+  min-height: 100%;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  background: linear-gradient(
+    hsl(37, 70%, 92%),
+    hsl(37, 80%, 69%) 90%,
+    hsl(37, 90%, 46%),
+    hsl(37, 100%, 23%));
+  font-family: "Gill Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
